--- a/KindleEmailSenderBot.TelegramBot/KindleEmailSenderBot.TelegramBot.csproj
+++ b/KindleEmailSenderBot.TelegramBot/KindleEmailSenderBot.TelegramBot.csproj
@@ -26,7 +26,7 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Resources\Commands.xml">
+      <None Update="Resources\commands.xml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
